examples/test/testpolicy871.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy871
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key22: value20
      key39: value5
      key16: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value2
      podSelector:
        matchLabels:
          key4: value21
          key13: value12
